@startuml

title __CALCULATOR's Class Diagram__\n

  namespace  {
    namespace om.example.calculator {
      class com.example.calculator.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.calculator {
      namespace bmi {
        class com.example.calculator.bmi.BMI {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.calculator {
      namespace builder {
        interface com.example.calculator.builder.Builder {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.calculator {
      namespace builder {
        class com.example.calculator.builder.BuilderIndicatorMini {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.calculator {
      namespace builder {
        class com.example.calculator.builder.Director {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.calculator {
      namespace builder {
        class com.example.calculator.builder.Indicator {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.calculator {
      namespace controller {
        class com.example.calculator.controller.HelloController {
        }
      }
    }
  }
  

  com.example.calculator.HelloApplication -up-|> javafx.application.Application
  com.example.calculator.builder.BuilderIndicatorMini .up.|> com.example.calculator.builder.Builder
  com.example.calculator.builder.BuilderIndicatorMini o-- com.example.calculator.builder.Indicator : indicator
  com.example.calculator.builder.Director o-- com.example.calculator.builder.BuilderIndicatorMini : builder
  com.example.calculator.controller.HelloController o-- com.example.calculator.builder.Indicator : indicator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
